[fig2024] fix image not centered
Former-commit-id: be1b9eeff691bc356bfe2172c49b781546b5e884

--- a/src/fig2024/gallery.css
+++ b/src/fig2024/gallery.css
@@ -21,7 +21,6 @@
     align-content: center;
     margin: auto;
     padding: 0;
-    width: 90%;
     max-width: 1200px;
 }
 
